--- a/less/cta.less
+++ b/less/cta.less
@@ -5,10 +5,6 @@
     margin-top: 72px;
     justify-content: flex-end;
 
-    @media @laptop {
-
-    }
-
     @media @tablet {
         width: 100%;
         justify-content: center;
@@ -29,13 +25,8 @@
         flex-flow: column;
         align-items: center;
         margin: 0 82px 0 0;
-
-        @media @laptop {
-
-        }
     
         @media @tablet {
-            width: 49%;
             margin: 10px 0 0 10px;
         }
     
@@ -60,12 +51,8 @@
     }
 
     .cta-img {
-        @media @laptop {
-
-        }
     
         @media @tablet {
-            width: 50%;
             margin: 10px 0 0 10px;
         }
     
